[gd_scene load_steps=5 format=3 uid="uid://c8wwwpdtyt3xs"]

[ext_resource type="Script" path="res://scenes/ui/object_details.gd" id="1_spyp2"]
[ext_resource type="Script" path="res://scenes/ui/input_notes.gd" id="2_u60b2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86w34"]
bg_color = Color(0.270588, 0.270588, 0.270588, 0.894118)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="CodeHighlighter" id="CodeHighlighter_2jt8i"]

[node name="object_details" type="Control"]
custom_minimum_size = Vector2(400, 215)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -215.0
offset_right = 16.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_spyp2")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
clip_contents = false
custom_minimum_size = Vector2(175, 100)
layout_mode = 0
offset_left = 10.0
offset_top = 8.0
offset_right = 810.0
offset_bottom = 208.0
theme_override_styles/panel = SubResource("StyleBoxFlat_86w34")

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="GridContainer2" type="GridContainer" parent="ScrollContainer/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="lbl_str" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#d9ead3]Str[/color]
"
fit_content = true

[node name="input_str" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "1 (+3)
"
fit_content = true

[node name="lbl_dex" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#d0e0e3]Dex[/color]
"
fit_content = true

[node name="input_dex" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "1"
fit_content = true

[node name="lbl_con" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#f4cccc]Con[/color]
"
fit_content = true

[node name="input_con" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "1"
fit_content = true

[node name="lbl_int" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#cfe2f3]Int[/color]"
fit_content = true

[node name="input_int" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "1"
fit_content = true

[node name="lbl_wis" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#ead1dc]Wis[/color]"
fit_content = true

[node name="input_wis" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "1
"
fit_content = true

[node name="lbl_cha" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#e6b8af]Cha[/color]"
fit_content = true

[node name="input_cha" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "1
"
fit_content = true

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="base" type="GridContainer" parent="ScrollContainer/GridContainer/GridContainer"]
layout_mode = 2
columns = 7

[node name="lbl_name" type="LineEdit" parent="ScrollContainer/GridContainer/GridContainer/base"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.764706, 0.635294, 0.396078, 1)
text = "name"
middle_mouse_paste_enabled = false

[node name="lbl_health" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/base"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[color=red]Health[/color]
"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_health" type="LineEdit" parent="ScrollContainer/GridContainer/GridContainer/base"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
text = "10"

[node name="lbl_health2" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/base"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[color=red]/[/color]
"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_health2" type="LineEdit" parent="ScrollContainer/GridContainer/GridContainer/base"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
text = "10"

[node name="lbl_initiative" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/base"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "[color=lightgreen]Initiative[/color]
"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_initiative" type="LineEdit" parent="ScrollContainer/GridContainer/GridContainer/base"]
layout_mode = 2

[node name="extra" type="GridContainer" parent="ScrollContainer/GridContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="lbl_status" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/extra"]
layout_mode = 2
bbcode_enabled = true
text = "[color=lightblue]Status[/color]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_status" type="TextEdit" parent="ScrollContainer/GridContainer/GridContainer/extra"]
self_modulate = Color(1, 1, 1, 0.588235)
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "fire"

[node name="lbl_notes" type="RichTextLabel" parent="ScrollContainer/GridContainer/GridContainer/extra"]
clip_contents = false
layout_mode = 2
text = "Notes"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="input_notes" type="TextEdit" parent="ScrollContainer/GridContainer/GridContainer/extra"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Multiattack: The knight makes two melee attacks.\\nGreatsword: Melee Weapon Attack: +5 to hit, reach 5 ft., one target. Hit: 10 (2d6 + 3) slashing damage."
wrap_mode = 1
syntax_highlighter = SubResource("CodeHighlighter_2jt8i")
script = ExtResource("2_u60b2")

[connection signal="text_changed" from="ScrollContainer/GridContainer/GridContainer/base/input_initiative" to="." method="_on_input_initiative_text_changed"]
